# project_1

./: .gitignore  Procfile  auth.json  main.py  one_watch.json  pyproject.toml  railway-vars.json  railway.json  render.yaml  requirements.txt  watch.json
config/: settings.py
templates/base/: base.html  navbar.html
watch/: admin.py  apps.py  views.py
watch/management/commands/: fetch_watches.py  load_initial_data.py
